<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <!-- Removed include to avoid conflicts -->


    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:weightSum="55"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center">


<!--Empty Space-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8">
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:text="Socially"
            android:textColor="@color/brown"
            android:textStyle="bold"
            android:textSize="70sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_margin="3dp"
            android:backgroundTint="@color/brown"
            style="@style/SquareTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_margin="3dp"
            android:backgroundTint="@color/brown"
            style="@style/SquareTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="Forgot password?"
            android:textColor="@color/brown"
            android:layout_gravity="end"
            android:background="@color/transparent"/>

        <android.widget.Button
            android:id="@+id/btnLogin2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:text="Log in"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/brown"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/dark_grey"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="OR"
                android:textColor="@color/dark_grey"
                android:layout_marginHorizontal="12dp"/>
            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/dark_grey"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="12"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Don't have an account?"
                android:textColor="@color/dark_grey"
                android:layout_weight="7"/>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:background="@color/transparent"
                android:text="Sign Up"
                android:textColor="@color/brown"
                android:gravity="left"
                android:layout_marginStart="-180dp"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="Socially"
        android:textColor="@color/brown"
        android:textSize="17sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>